<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reservation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.reservation.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_query"
        android:name="com.example.reservation.ui.query.QueryFragment"
        android:label="@string/menu_query"
        tools:layout="@layout/fragment_query" />

    <fragment
        android:id="@+id/nav_modification"
        android:name="com.example.reservation.ui.modification.ModificationFragment"
        android:label="@string/menu_modification"
        tools:layout="@layout/fragment_modification" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="com.example.reservation.ui.manage.ManageFragment"
        tools:layout="@layout/fragment_manage_menu" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.reservation.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>