<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text2"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:orientation="horizontal"
                android:text="@string/u_id" />

            <EditText
                android:id="@+id/id1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="각 유저의 아이디가 나와야함"
                android:inputType="textPersonName"
                android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text3"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:orientation="horizontal"
                android:text="@string/u_pw" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword"
                android:enabled="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/text4"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:orientation="horizontal"
                android:text="@string/u_check" />

            <EditText
                android:id="@+id/password_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="password_check"
                android:inputType="textPassword"
                android:enabled="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text6"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:orientation="horizontal"
                android:text="@string/u_phone" />

            <EditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="phone number"
                android:inputType="phone"
                android:enabled="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text7"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:orientation="horizontal"
                android:text="@string/u_restaurant"
                />

            <EditText
                android:id="@+id/restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="restaurant_name"
                android:inputType="textPersonName"
                android:enabled="false"
                tools:visibility="GONE" />

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="수정" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>